2004-04-09  Gerhard Jaeger <gerhard@gjaeger.de>
	* backend/plustek.c: Fixes bug #300620.
	* sanei_thread.c: Fixes bug-reports #300617 & #300618,
	  all reports and patches or patch-ideas by Mattias Ellert.

2004-04-09  Oliver Schwartz <Oliver.Schwartz@gmx.de>

	* backend/snapscan-usb.c backend/snapscan-mutex.c
	  backend/Makefile.in: Use own file for mutex implementation
	  to allow for easier porting to other platforms
	  backend/snapscan-sources.c backend/snapscan.c:
	  Bugfixes for pthread implementation

2004-04-08  Oliver Schwartz <Oliver.Schwartz@gmx.de>

	* backend/snapscan.c backend/snapscan-sources.c 
	  backend/snapscan.h backend/Makefile.in:
	  Use sanei_thread functions instead of forking
	* backend/snapscan-options.c: Change title and description
	  for OPT_HIGHQUALITY to use existing i18n translations
	* backend/snapscan-usb.c: Use urb counting 
	  (thanks to Jose Alberto Reguero)

2004-04-06  Gerard Klaver   <gerard at gkall dot hobby dot nl>

	* backend/test.c changed some option group headers to advanced option
	  menu.
	
2004-04-06  Jochen Eisinger <jochen@penguin-breeder.org>

	* sanei/sanei_pa4s2.c include/sane/sanei_pa4s2.h, backend/mustek_pp.c:
	  fixed compiler warnings

2004-04-04  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* backend/gt68xx.c backend/gt68xx.conf backend/gt68xx_devices.c
	  backend/gt68xx_mid.c doc/sane-gt68xx.man doc/descriptions/gt68xx.desc
	  doc/gt68xx/gt68xx.CHANGES:
	  Added BGR color order for pixel mode. Plustek OpticPro U16B works
	  in color mode now. Made 600 dpi mode for Mustek BearPaw 2400 TA
	  Plus a bit faster. Changed Mustek ScanExpress A3 linedistance
	  correction. Added detection of Visioneer Onetouch 7300.
	* doc/descriptions/unsupported.desc: Removed Canon D660. Now
	  supported by plustek backend.

2004-04-04  Gerhard Jaeger <gerhard@gjaeger.de>
	* doc/descriptions/plustek.desc: added Canon D660U.
	* doc/plustek/Plustek-USB.changes doc/plustek/Plustek-USB-TODO.txt